# opuscpp

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  full_report.md
src/: README.md  opus_codec.cpp  opus_codec.h
tests/: README.md  benchmark_vs_official.cpp  conformance_decode.cpp  conformance_encode.cpp  detector_mode_balance.cpp  encode_conformance_shared.h  generate_synthetic_wav.py  official_encode_oracle.cpp  perceptual_memory_validation.cpp  plc_validation.cpp  run_smoke.py  smoke_roundtrip.cpp
tests/metrics/: decode_speed_vs_official.csv  encode_speed_vs_official.csv  memory_vs_official.csv  quality_vs_official.csv  speed_vs_official_intrinsics_60s.csv
tests/scripts/: check_env.py  run_full_report.ps1  run_full_report.sh  run_smoke.ps1  run_smoke.sh  setup_official_compare.py
